refactor(security): 优化认证和数据脱敏路径排除配置
- 使用Set.of和List.of简化不可变集合和模式列表的创建
- 新增Ant风格路径模式列表支持认证和数据脱敏排除
- 增加基于AntPathMatcher的路径模式匹配逻辑
- 重构isAuthExcluded和isDataMaskExcluded方法，支持精确匹配和模式匹配
- 维护现有排除路径的完整性，增强灵活性和可扩展性