@@ -1,8 +1,10 @@
 package org.unreal.modelrouter.security.config;
 
+import org.springframework.util.AntPathMatcher;
 import java.util.Set;
 import java.util.HashSet;
 import java.util.Collections;
+import java.util.List;
 
 /**
  * 统一管理所有需要排除认证和数据脱敏的路径配置
@@ -19,50 +21,70 @@ public class ExcludedPathsConfig {
      */
     public static final Set<String> DATA_MASKING_EXCLUDED_PATHS;
     
+    /**
+     * 需要排除认证的Ant风格路径模式列表
+     */
+    public static final List<String> AUTH_EXCLUDED_PATTERNS;
+    
+    /**
+     * 需要排除数据脱敏的Ant风格路径模式列表
+     */
+    public static final List<String> DATA_MASKING_EXCLUDED_PATTERNS;
+    
+    private static final AntPathMatcher pathMatcher = new AntPathMatcher();
+    
     static {
-        // 认证排除路径
-        Set<String> authPaths = new HashSet<>();
-        authPaths.add("/actuator/");
-        authPaths.add("/health");
-        authPaths.add("/metrics");
-        authPaths.add("/swagger-ui/");
-        authPaths.add("/v3/api-docs");
-        authPaths.add("/webjars/");
-        authPaths.add("/api/auth/jwt/login");
-        authPaths.add("/admin/");
-        authPaths.add("/favicon.ico");
-        authPaths.add("/.well-known");
-        AUTH_EXCLUDED_PATHS = Collections.unmodifiableSet(authPaths);
+        // 认证排除路径 - 使用Set.of创建不可变集合（Java 9+）
+        AUTH_EXCLUDED_PATHS = Set.of(
+            "/actuator/",
+            "/health",
+            "/metrics",
+            "/swagger-ui/",
+            "/v3/api-docs",
+            "/webjars/",
+            "/api/auth/jwt/login",
+            "/admin",
+            "/favicon.ico",
+            "/.well-known"
+        );
+        
+        // 认证排除路径模式
+        AUTH_EXCLUDED_PATTERNS = List.of(
+            "/actuator/**",
+            "/api/auth/jwt/login"
+        );
         
         // 数据脱敏排除路径
-        Set<String> securityPaths = new HashSet<>();
-        securityPaths.add("/actuator/");
-        securityPaths.add("/health");
-        securityPaths.add("/metrics");
-        securityPaths.add("/swagger-ui/");
-        securityPaths.add("/v3/api-docs");
-        securityPaths.add("/favicon.ico");
-        securityPaths.add("/.well-known");
-        securityPaths.add("/static/");
-        securityPaths.add("/css/");
-        securityPaths.add("/js/");
-        securityPaths.add("/images/");
-        // 排除AI模型接口路径的数据脱敏（但仍需要认证！）
-        // 这些接口不进行数据脱敏是因为AI模型的输入输出不应被修改
-        // 但这些接口仍然需要通过API Key或JWT进行认证
-        securityPaths.add("/v1/chat/");
-        securityPaths.add("/v1/embeddings");
-        securityPaths.add("/v1/rerank");
-        securityPaths.add("/v1/audio/");
-        securityPaths.add("/v1/images/");
-        securityPaths.add("/v1/debug/");
-        securityPaths.add("/admin/");
-        // 排除认证端点
-        securityPaths.add("/api/auth/jwt/login");
-        // 排除JWT账户管理端点
-        securityPaths.add("/api/security/jwt/accounts");
-        securityPaths.add("/api/security/jwt/accounts/");
-        DATA_MASKING_EXCLUDED_PATHS = Collections.unmodifiableSet(securityPaths);
+        DATA_MASKING_EXCLUDED_PATHS = Set.of(
+            "/actuator/",
+            "/health",
+            "/metrics",
+            "/swagger-ui/",
+            "/v3/api-docs",
+            "/favicon.ico",
+            "/.well-known",
+            "/static/",
+            "/css/",
+            "/js/",
+            "/images/",
+            // 排除AI模型接口路径的数据脱敏（但仍需要认证！）
+            "/v1/chat/",
+            "/v1/embeddings",
+            "/v1/rerank",
+            "/v1/audio/",
+            "/v1/images/",
+            "/v1/debug/",
+            "/admin",
+            // 排除认证端点
+            "/api/auth/jwt/login"
+        );
+        
+        // 数据脱敏排除路径模式
+        DATA_MASKING_EXCLUDED_PATTERNS = List.of(
+            "/actuator/**",
+            "/api/auth/jwt/login",
+            "/api/security/jwt/accounts/**"
+        );
     }
     
     /**
@@ -72,9 +94,15 @@ public class ExcludedPathsConfig {
      * @return 如果路径应排除认证则返回true，否则返回false
      */
     public static boolean isAuthExcluded(String path) {
-        return AUTH_EXCLUDED_PATHS.stream()
-                .anyMatch(path::startsWith) || 
-                AUTH_EXCLUDED_PATHS.contains(path);
+        // 检查精确匹配和前缀匹配
+        if (AUTH_EXCLUDED_PATHS.stream().anyMatch(excludedPath -> 
+            path.equals(excludedPath) || path.startsWith(excludedPath))) {
+            return true;
+        }
+        
+        // 检查Ant路径模式匹配
+        return AUTH_EXCLUDED_PATTERNS.stream().anyMatch(pattern -> 
+            pathMatcher.match(pattern, path));
     }
     
     /**
@@ -84,8 +112,14 @@ public class ExcludedPathsConfig {
      * @return 如果路径应排除数据脱敏则返回true，否则返回false
      */
     public static boolean isDataMaskExcluded(String path) {
-        return DATA_MASKING_EXCLUDED_PATHS.stream()
-                .anyMatch(path::startsWith) || 
-                DATA_MASKING_EXCLUDED_PATHS.contains(path);
+        // 检查精确匹配和前缀匹配
+        if (DATA_MASKING_EXCLUDED_PATHS.stream().anyMatch(excludedPath -> 
+            path.equals(excludedPath) || path.startsWith(excludedPath))) {
+            return true;
+        }
+        
+        // 检查Ant路径模式匹配
+        return DATA_MASKING_EXCLUDED_PATTERNS.stream().anyMatch(pattern -> 
+            pathMatcher.match(pattern, path));
     }
 }
